# TraslatorBot

./: README.md  app.ipynb  app.py  cbot.ipynb  cbot.py  pyproject.toml
templates/: index.html
tests/: test_translator.py
